# emb

./: .gitignore  README.md
landing_marker/aruco_gridboard/: CMakeLists.txt  README.md  package.xml
landing_marker/aruco_gridboard/data/: aruco_grid.rviz  detector_params.yml  layout.yaml
landing_marker/aruco_gridboard/launch/: detection.launch
landing_marker/aruco_gridboard/src/: create_board.cpp  names.cpp  names.h  node.cpp  node.h
landing_marker/landing_planner/: CMakeLists.txt  package.xml
landing_marker/landing_planner/include/: land.h
landing_marker/landing_planner/launch/: aruco.launch  whycon.launch
landing_marker/landing_planner/src/: marker_planner.cpp
landing_marker/landing_planner/srv/: terminate.srv
landing_marker/vision_opencv/cv_bridge/: CMakeLists.txt
landing_marker/whycon/: .gitignore  CMakeLists.txt  package.xml
landing_marker/whycon/launch/: whycon.launch
landing_marker/whycon/src/lib/: circle_detector.cpp
landing_marker/whycon/src/ros/: whycon_ros.cpp  whycon_ros.h
landing_planner/: CMakeLists.txt  package.xml
landing_planner/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
landing_planner/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
landing_planner/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
landing_planner/launch/: planner.launch
landing_planner/src/: marker_planner.cpp
mav_trajectory_generation/catkin_simple/: CMakeLists.txt  README.md
mav_trajectory_generation/eigen_catkin/: CMakeLists.txt
mav_trajectory_generation/eigen_checks/: CMakeLists.txt
mav_trajectory_generation/glog_catkin/: CMakeLists.txt
mav_trajectory_generation/mav_comm/mav_comm/: CMakeLists.txt
mav_trajectory_generation/mav_comm/mav_msgs/: CMakeLists.txt
mav_trajectory_generation/mav_comm/mav_planning_msgs/: CMakeLists.txt
mav_trajectory_generation/mav_comm/mav_state_machine_msgs/: CMakeLists.txt
mav_trajectory_generation/mav_comm/mav_system_msgs/: CMakeLists.txt
mav_trajectory_generation/mav_trajectory_generation/: CMakeLists.txt
mav_trajectory_generation/mav_trajectory_generation_example/: CMakeLists.txt  package.xml
mav_trajectory_generation/mav_trajectory_generation_example/cfg/: rviz_view_tarot.rviz
mav_trajectory_generation/mav_trajectory_generation_example/include/mav_trajectory_generation_example/: example_planner.h
mav_trajectory_generation/mav_trajectory_generation_example/launch/: example_6dof.launch
mav_trajectory_generation/mav_trajectory_generation_example/src/: example_planner_6dof.cc  example_planner_6dof_node.cc
mav_trajectory_generation/mav_trajectory_generation_ros/: CMakeLists.txt
mav_trajectory_generation/mav_visualization/: CMakeLists.txt
mav_trajectory_generation/nlopt/: CMakeLists.txt
px4_controllers/: .gitignore  README.md
px4_controllers/controller_msgs/: CMakeLists.txt  package.xml
px4_controllers/controller_msgs/msg/: Sequence.msg
px4_controllers/controller_msgs/srv/: getmode.srv  setmode.srv  start.srv
px4_controllers/geometric_controller/: CMakeLists.txt  README.md  package.xml
px4_controllers/geometric_controller/cfg/: GeometricController.cfg  gps_calib.yaml  gps_longlat.yaml  gps_longlat_old.yaml  gps_longlat_save.yaml
px4_controllers/geometric_controller/docs/: triangle_formsa.h
px4_controllers/geometric_controller/include/geometric_controller/: UTM.h  common.h  feature_extract.h  geometric_controller.h  logging_lib.cpp  logging_lib.h  trajectory_helper.h  triangle_form.h
px4_controllers/geometric_controller/launch/: automatic.launch  manual.launch
px4_controllers/geometric_controller/src/: calib.cpp  feature.cpp  geometric_controller.cpp  geometric_controller_node.cpp  gnss.cpp  stat.cpp
px4_controllers/geometric_controller/srv/: getmode.srv  setmode.srv
px4_controllers/px4_controllers/: CMakeLists.txt
px4_controllers/sequence_controller/: CMakeLists.txt  package.xml
px4_controllers/sequence_controller/cfg/: seq.yaml
px4_controllers/sequence_controller/cfg/script/: aruco.sh  move.sh  whycon.sh
px4_controllers/sequence_controller/src/: parser.cpp
px4_controllers/yaml_cpp_catkin/: CMakeLists.txt
